<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"


        android:id="@+id/linearLayout"
        android:padding="10dp">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:iss_auto_cycle="true"
            app:iss_delay="0"
            app:iss_period="1000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category"
                android:layout_weight="1"
                android:textSize="21sp"
                android:textStyle="bold" />


        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/new_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_product"
                        android:textSize="21sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all"
                        android:id="@+id/new_pop_seeAll"
                        android:textColor="#681277"
                        android:textStyle="bold"
                        android:layout_alignParentRight="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/we_provide_best_product"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/new_product"/>
                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/new_product_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="10dp"/>
                
            </LinearLayout>

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/popular_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_product"
                    android:textSize="21sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="See All"
                    android:id="@+id/popular_seeAll"
                    android:textColor="#681277"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we_provide_best_product"
                    android:layout_below="@+id/popular_product"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_product_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginBottom="30dp"

                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </LinearLayout>



</androidx.core.widget.NestedScrollView>